1.2.0

General:  
- Added support for Xbox 360 ROMs and directories (can only output to folder).  
- Improved Xbox ROM detection speed.  
- Added a warning if the program fails to verify a Mod Crate.  
- Console/Region specific options will not appear on unsupported versions anymore.  
- The window will now flash when the process is complete.  
  
Crash Bandicoot, Crash Bandicoot 2: Cortex Strikes Back, Crash Bandicoot: WARPED:
- Added region detection for Mod Crates. 
- New feature: All Crates Are Blank
- New feature: All Crates Are Wumpa (Crash 1 & 2)
- New feature: Randomize Warp Room (Crash 2 & WARPED)
- New feature: Backwards Levels (where possible)
- New feature: Random Levels Are Backwards
- New feature: Randomize Crate Contents
- New feature: Bear Levels On Foot (Crash 2)
- New feature: Randomize Bike Levels & Flying Levels (Crash WARPED)
- New feature: Wider Camera Field-Of-View
- New feature: Randomize Camera Field-Of-View
- New feature: Randomize World Colors
- New feature: Randomize World Palette
- New feature: Greyscale World (Crash 2 & WARPED)
- New feature: Untextured World (Crash 2 & WARPED)
- Crate Mod Loader info is now displayed ingame (Crash 1 - Main menu, Crash 2/WARPED - Pause menu in the hub)

Crash of the Titans, Crash Mind Over Mutant:
- Added support for the Xbox 360 version.  
  
1.1.0

General:
- Added support for Mod Crates (all games can replace base extracted files, supported games have more options and replacement layers), an example mod for Crash Twinsanity is included in the "Mods" folder.
- Added API links where available.
- Merged ROM checking into one option to prevent confusion.
- Added drag & drop support (ROMs and folders).
- Unsupported games now display differently than unknown ROMs.

New games supported:
- Rayman 3: Hoodlum Havoc
- Crash Team Racing

New mod layers:
- Crash Team Racing: BIGFILE.BIG contents
- Crash Nitro Kart: ASSETS.GOB contents
- Crash Twinsanity: CRASH.BD contents