@@ -230,6 +230,7 @@
     <Compile Include="GameSpecific\CrashTTR\Pure3D\Util.cs" />
     <Compile Include="GameSpecific\CrashTTR\RCF.cs" />
     <Compile Include="GameSpecific\CrashTTR\RCF_Manager.cs" />
+    <Compile Include="GameSpecific\CrashTWOC\TWOC_File_CRT.cs" />
     <Compile Include="GameSpecific\MarioSunshine\Modder_MarioSunshine.cs" />
     <Compile Include="GameSpecific\CrashMoM\Modder_MoM.cs" />
     <Compile Include="GameSpecific\Rayman2\Modder_Rayman2.cs" />
