@@ -6,6 +6,9 @@ General:
 - Added a warning if the program fails to verify a Mod Crate.  
 - Console/Region specific options will not appear on unsupported versions anymore.  
 - The window will now flash when the process is complete.  
+
+New games supported:
+- Crash Bandicoot: The Wrath of Cortex
   
 Crash Bandicoot, Crash Bandicoot 2: Cortex Strikes Back, Crash Bandicoot: WARPED:
 - Added region detection for Mod Crates. 
